--- a/site.css
+++ b/site.css
@@ -15,7 +15,7 @@ body, html {
 /* Create a Parallax Effect */
 .bgimg {
     height:115%;
-  background-image: url('narrows.jpg');
+  background-image: url('large/narrows.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
