--- a/site.css
+++ b/site.css
@@ -19,14 +19,12 @@ body, html {
 .bgimg {
     height:115%;
   background-image: url('large/narrows.jpg');
-  background-attachment: fixed;
-  background-position: top;
-  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
   background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-position: center center;
     background-repeat: no-repeat;
 }
 
