--- a/site.css
+++ b/site.css
@@ -31,6 +31,7 @@ body, html {
 /* Create a Parallax Effect */
 .midimg {
   height: 300px;
+  width: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
