--- a/site.css
+++ b/site.css
@@ -32,7 +32,7 @@ body, html {
 .midimg {
   height: 300px;
   width: 100%;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
