--- a/site.css
+++ b/site.css
@@ -33,7 +33,7 @@ body, html {
   height: 300px;
   width: 100%;
   background-attachment: scroll;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
     -webkit-background-size: cover;
