--- a/site.css
+++ b/site.css
@@ -31,7 +31,7 @@ body, html {
 /* Create a Parallax Effect */
 .midimg {
   height: 300px;
-  width: 100%;
+  width: 100vh;
   background-attachment: scroll;
   background-position: center center;
   background-repeat: no-repeat;
