--- a/site.css
+++ b/site.css
@@ -19,7 +19,7 @@ body, html {
 .bgimg {
     height:115%;
   background-image: url('large/narrows.jpg');
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: center center;
   background-size: cover;
     -webkit-background-size: cover;
@@ -32,7 +32,7 @@ body, html {
 .midimg {
   height: 300px;
   width: 100%;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
